fix: stop manually dropping -copy-finished -- it messes up the status bar overlapping

--- a/css/popup.css
+++ b/css/popup.css
@@ -566,29 +566,7 @@
 }
 
 @media (hover) {
-  /*
-   * We don't apply hover styles when we are in the finished state.
-   *
-   * That's because when we're on a device like a touchscreen laptop the
-   * media(hover) query above will still match and if we touch an entry we'll
-   * end up with the mouse cursor sitting in that position even when the copy
-   * has completed. As a result the entry will remain highlighted.
-   *
-   * If the user then uses the keyboard to highlight subsequent entries the
-   * experience will be quite confusing because we'll have one entry highlighted
-   * due to the hover state below and another highlighted due to the -selected
-   * rule above.
-   *
-   * We make sure the hover styles differ by using the `brightness` filter below
-   * but even so it's confusing.
-   *
-   * As a result we simply hide hover styles after the copy has finished and
-   * then make sure to clear -copy-finished on the next pointer event.
-   *
-   * This doesn't help for the case where the user cancels the copy operation
-   * but it's good enough for now.
-   */
-  .window.touch:not(.-copy-finished) .entry:hover {
+  .window.touch .entry:hover {
     color: var(--selected-highlight);
     background: var(--selected-bg);
     border-radius: 2px;
@@ -596,6 +574,10 @@
     /* Make the highlight brighter so we can distinguish it from a selection made
      * using the keyboard. */
     filter: brightness(1.2);
+  }
+  .window.touch .entry.-selected:hover {
+    /* Let keyboard selection override the hover state */
+    filter: none;
   }
 }
 
@@ -605,7 +587,7 @@
 }
 
 @media (hover) {
-  .window.touch:not(.-copy-finished) .entry:hover .w-def .tag {
+  .window.touch .entry:hover .w-def .tag {
     color: var(--selected-tag-color);
     border-color: var(--selected-tag-border) !important;
   }
@@ -616,7 +598,7 @@
 }
 
 @media (hover) {
-  .window.touch:not(.-copy-finished) .entry:hover .w-kanji {
+  .window.touch .entry:hover .w-kanji {
     color: var(--selected-highlight);
   }
 }
@@ -627,8 +609,8 @@
 }
 
 @media (hover) {
-  .window.touch:not(.-copy-finished) .entry:hover .w-kana,
-  .window.touch:not(.-copy-finished) .entry:hover .w-romaji {
+  .window.touch .entry:hover .w-kana,
+  .window.touch .entry:hover .w-romaji {
     color: var(--selected-reading-highlight);
   }
 }
@@ -639,8 +621,8 @@
 }
 
 @media (hover) {
-  .window.touch:not(.-copy-finished) .entry:hover .w-def,
-  .window.touch:not(.-copy-finished) .entry:hover .w-def * {
+  .window.touch .entry:hover .w-def,
+  .window.touch .entry:hover .w-def * {
     color: var(--selected-def-color);
   }
 }
@@ -734,7 +716,7 @@
 }
 
 @media (hover) {
-  .window.touch:not(.-copy-finished) .kanji:hover {
+  .window.touch .kanji:hover {
     color: var(--selected-highlight);
     background: var(--selected-bg);
     border-radius: 2px;
